2003-04-03  Derek Price  <derek@ximbiot.com>

	* cvs.h: Avoid __pure__ for GCC versions < 2.96 & __malloc__ for GCC
	versions < 3.0.

2003-04-02  Larry Jones  <lawrence.jones@eds.com>

	* update.c (update, update_fileproc, update_filesdone_proc,
	update_dirent_proc, update_dirleave_proc): Keep track of whether
	a tag is both a revision tag and a branch tag and warn the user.
	* sanity.sh (branches4): New tests for above.

2003-04-02  Derek Price  <derek@ximbiot.com>

	* recurse.c (do_recursion): Use strstr("/./") rather than strchr('.')
	to catch only indirections in paths and not directory names with dots
	in them.
	(Report from Pavel Roskin <proski@gnu.org>.)

	* sanity.sh (multiroot): Put a dot in the CVSROOT_DIRNAMEs.
	(dottedroot): New test.
	(Based on a script from Pavel Roskin <proski@gnu.org>.)

2003-04-01  Derek Price  <derek@ximbiot.com>

	* sanity.sh (multiroot2-9): Add newly TRACEd parse_cvsroot() to
	expected output.

2003-03-31  Derek Price  <derek@ximbiot.com>

	* rcs.c (freercsnode): Revert an accidental change from the previous
	commit.

2003-03-31  Derek Price  <derek@ximbiot.com>

	* recurse.c (start_recursion): Accept new repository argument so that
	the working directory may be tracked by do_recursion without using
	xgetwd(), which returned a value different from the one the user
	requested when symlinks were in use.  Add TRACE.  Pass repository_in
	to do_recursion() as part of the recursion frame.
	(do_recursion): Default srepository to NULL and only set when we set
	repository.  Keep track of repository using xframe.repository for the
	r* commands rather than xgetwd(), which used to break when CVSROOT was
	a symlink to a real root.

	* cvs.h (xreadlink): #ifdef HAVE_READLINK proto.
	(xresolvepath): New proto.
	(start_recursion): Add repository to proto.
	(*): Define some more abstract TRACE levels.
	* update.h (do_update): Add repository argument to proto.

	* checkout.c (safe_location): Add more complete header comment.  Add